fixed layout bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,13 +5,13 @@ body {
 a {
   color: #00B7FF; }
 
-img {
+img.r6-map-img {
   max-width: 70%;
   height: auto; }
 
-.col-md-6 {
-  padding: 10px 10px 10px 10px; }
-
+/* .col-md-6 { */
+/*           padding: 10px 10px 10px 10px; */
+/* } */
 html {
   position: relative;
   min-height: 100%; }
